# nous

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  README.md  ROADMAP.md  nous-technical-spec.md
pipeline/: .env.example  alembic.ini  pyproject.toml
pipeline/alembic/: env.py
pipeline/alembic/versions/: 0001_initial_schema.py  0002_m2_schema.py  0003_m3_schema.py  0004_m4_competitors.py  0005_normalize_name_collapse_whitespace.py  0006_funding_rounds_filing_id_set_null.py  0007_extraction_confidence_check.py  0008_companies_last_scrape_attempt_at.py  0009_remove_form_d.py  0010_people_table.py  0011_competitor_source.py  0012_discovered_via_default_unknown.py  0013_company_investors.py  0014_companies_employee_count_checked_at.py  0015_news_and_website_funding_checked_at.py  0016_company_status.py  0017_company_consecutive_scrape_failures.py  0018_investor_slug.py  0019_company_snapshots.py  0020_competitor_self_ref_and_news_url_index.py  0021_company_total_raised.py  0022_catalog_quality_filtering.py  0022_company_relationships.py  0023_catalog_quality_filtering.py  0024_pipeline_runs.py  0025_investor_portfolio_count.py  0026_null_unevidenced_us_country.py  0027_enable_rls.py  0028_latest_round_denorm.py  0029_companies_hq_country_checked_at.py  0030_filter_column_indexes.py  0031_prompt_version_stamps.py  0032_slug_aliases.py  0033_company_embeddings.py  0034_themes.py  0035_semantic_companies_fn.py  0036_funding_momentum_fns.py  0037_website_source.py  0038_company_map_coords.py  0039_company_momentum.py  (+7 more)
pipeline/src/nous/: cli.py  config.py  observability.py
pipeline/src/nous/db/: __init__.py  base.py  models.py  session.py  upsert.py
pipeline/src/nous/evals/: __init__.py  harness.py  prompts.py  record.py  schema.py  scoring.py
pipeline/src/nous/llm/: client.py
pipeline/src/nous/pipeline/: adapter_health.py  analyze_competitors.py  audit_round_entities.py  career_history_probe.py  cleanup_form_d.py  clear_company_facts.py  compute_completeness.py  compute_map_positions.py  compute_momentum.py  compute_themes.py  data_quality.py  db_stats.py  dedup_companies.py  dedup_investors.py  delete_round.py  derive_relationships.py  describe_fallback.py  discover_github_trending.py  embed_companies.py  enrich_companies.py  entity_guard.py  estimate_employees.py  exclude_company.py  extract_career_history.py  extract_funding.py  infer_hq_country.py  ingest_filings.py  (+24 more)
pipeline/tests/: conftest.py  test_adapter_health.py  test_analyze_competitors_stage.py  test_article_links.py  test_audit_round_entities.py  test_auto_create.py  test_browser_fallback.py  test_career_history_probe.py  test_career_history_probe_db.py  test_career_history_prompt.py  test_career_moves_model.py  test_category.py  test_cleanup_form_d.py  test_clear_company_facts.py  test_cli_enrich_redescribe_flag.py  test_cli_judge_eligibility_flag.py  test_company_description_long_prompt.py  test_company_description_prompt.py  test_company_eligibility_prompt.py  test_company_investors_schema.py  test_company_match_prompt.py  test_company_relationships_model.py  test_competitor_analysis_prompt.py  test_competitor_candidates_prompt.py  test_competitors_schema.py  test_completeness.py  test_compute_completeness.py  test_compute_completeness_db.py  test_compute_map_positions.py  test_compute_map_positions_db.py  test_compute_momentum.py  test_compute_momentum_db.py  test_compute_themes.py  test_compute_themes_db.py  test_crunchbase_news.py  test_data_quality_db.py  test_db_models.py  test_db_session_guards.py  test_db_stats.py  test_dedup_companies.py  (+101 more)
pipeline/tests/fixtures/: article_funding_announcement.txt  crunchbase_news_sample.xml  edgar_search_sample.json  form_d_sample.xml  frenflow_lists_kalshi.html  geekwire_sample.xml  github_trending.html  google_news_sample.xml  kalshi_real_homepage.html  prnewswire_sample.xml  real_company_homepage.html  sample_homepage_no_name.html  sample_homepage_with_name.html  siliconangle_sample.xml  soft_for_sale_page.html  startupintros_directory_page.html  techcrunch_article.html  techcrunch_venture.xml  venturebeat_sample.xml
pipeline/tests/golden/: README.md  baseline.json
(+705 files in other folders)
