[project]
name = "nous"
version = "0.1.0"
description = "nous data pipeline — ingests SEC Form D filings and enriches them into company records."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "click>=8.1",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "tenacity>=8",
    "lxml>=5",
    "google-genai>=1.0",
    "feedparser>=6.0",
]

[project.scripts]
nous = "nous.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/nous"]

[[tool.mypy.overrides]]
module = ["selectolax.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["lxml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.genai.*", "google.genai"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["feedparser", "feedparser.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
