[project]
name = "nous"
version = "0.1.0"
description = "nous data pipeline — discovers software startups from public sources and enriches them into company records."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "click>=8.1",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "tenacity>=8",
    "feedparser>=6.0",
    "curl_cffi>=0.7",
    "playwright>=1.40",
    # SQLAlchemy Vector type for companies.embedding (migration 0033). Main
    # dependency (not the embeddings group): db/models.py imports it
    # unconditionally, and it's a tiny pure-Python package. The heavy model
    # runtime (fastembed/onnx) is what lives in the optional group.
    "pgvector>=0.5.0",
]

[project.scripts]
nous = "nous.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Optional: the embed-companies stage's local CPU model runtime (fastembed →
# onnxruntime + tokenizers, heavy). Deliberately NOT a default dependency so
# the everyday `uv sync` stays light; pipeline.yml installs it explicitly with
# `uv sync --group embeddings`. Tests never need it — they inject the fake
# embedder through the Embedder Protocol seam.
embeddings = [
    "fastembed>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/nous"]

[[tool.mypy.overrides]]
module = ["selectolax.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["feedparser", "feedparser.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["curl_cffi", "curl_cffi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true

# fastembed lives in the optional `embeddings` dependency group above and is
# absent under the default `uv sync` — e.g. in the lint workflow, where mypy
# still runs. `follow_imports = "skip"` keeps local (group installed) and CI
# (group absent) runs equivalent: fastembed is Any in both. It is imported
# lazily behind the Embedder Protocol seam in pipeline/embed_companies.py, so
# the Any surface is one adapter constructor.
[[tool.mypy.overrides]]
module = ["fastembed", "fastembed.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
